syntax = "proto3";

package chainmetric.identity.service;
option go_package = "github.com/timoth-y/chainmetric-network/orgservices/identity/api/rpc";

import "identity/api/presenter/admin.proto";
import "identity/api/presenter/user.proto";

service AdminService {
  rpc getCandidates(presenter.UsersRequest) returns (presenter.UsersResponse);
  rpc enrollUser(presenter.EnrollUserRequest) returns (presenter.EnrollUserResponse);
}
