syntax = "proto3";

package chainmetric.notifications;

option go_package = "github.com/timoth-y/chainmetric-network/orgservices/notifications/api/presenter";

import "validate/validate.proto";
import "google/protobuf/timestamp.proto";

message SubscriptionRequest {
  string assetID = 1                     [(validate.rules).string = {min_len: 5}];
  repeated string metrics = 2            [(validate.rules).repeated = {min_items: 1}];
  google.protobuf.Timestamp expireAt = 3 [(validate.rules).timestamp = {required: false}];
}

message CancellationRequest {
  repeated CancellationRequestItem targets = 1;
}

message CancellationRequestItem {
  string assetID = 1;
  string metrics = 2;
}
